# labs

./: README.md  pyproject.toml
.github/workflows/: test.yml
database/: database.py
lr1/: 1.py  2.py  3.py  README.md  errors.txt  logs.txt  output.txt
lr2/: 1.py  2.py  error.txt  greter.py
tiny-database/: .pre-commit-config.yaml  main.py  pyproject.toml
tiny-database/database/: database.py
tiny-database/tests/: test_database.py
