[project]
name = "tiny-database"
version = "0.1.0"
description = ""
authors = [
    { name = "dasha", email = "dariasaligina@gmail.com" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "8.3.3"
pytest-cov = "6.0.0"

[tool.poetry]
packages = [
    {include = "database"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
